syntax = "proto3";

package game;

message CreateGame {
  int64 timestamp = 1;
}

message JoinGame {
  string roomId = 1;
  int64 timestamp = 2;
}

message LocationUpdatePayload  {
  float x = 1;
  float y = 2;
}